# mgs-workflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  downstream-column-requirements.md  expected-outputs-downstream.txt  expected-outputs-run.txt  extractViralReadsShort-integration-analysis.md  get_test_results.py  main.nf  nextflow.config  nf-test.config  pipeline-version.txt  plan.md  pyproject.toml  test_affected.sh  test_component_dependencies.py  workflow.nf
analysis/: single-vs-paired-read.qmd
basecall/: nextflow.config
configs/: basecall.config  batch.config  containers.config  downstream.config  index-for-run-test-nextflow.config  index-for-run-test.config  index.config  logging.config  logging_downstream.config  main.config  output.config  profiles.config  read_type.config  resources.config  run.config  run_dev_se.config  run_illumina.config  run_ont.config  run_validation.config
docker/: atria.Dockerfile  biopython.Dockerfile  kraken-awscli.Dockerfile  nao-blast-awscli.Dockerfile  nao-bowtie2-samtools-awscli.Dockerfile  nao-kraken2-awscli.Dockerfile  nao-minimap2-samtools-awscli.Dockerfile  nao-rpkg.Dockerfile  ncbi-genome-download.Dockerfile  run-tests.Dockerfile  securebio-nao-pypkg.Dockerfile
docs/: README.md  annotation.md  batch.md  config.md  developer.md  downstream.md  faqs.md  index.md  installation.md  intermediate_output_lca.md  lca.md  lca_intermediates.md  output.md  overview.md  process_lca_aligner_output_intermediates.md  reproducibility.md  run.md  run_validation.md  troubleshooting.md  usage.md  version_schema.md  versioning.md  virus_hits_final.md
env/: bowtie.yaml  bracken.yaml  dvf.yaml  main.yaml  qc.yaml  r.yaml
modules/local/markAlignmentDuplicates/mark_duplicates/: Cargo.toml
modules/local/markAlignmentDuplicates/mark_duplicates/src/: main.rs
ont_run_test/: libraries.csv  nextflow.config
ref/: adapters.fa  adapters.fasta  host-taxa.tsv  human-viruses.tsv  hv_patterns_exclude.txt  libraries.csv  s3-lifecycle-policy.json
scripts/: count-viral-taxa.R  (+7 more)
(+579 files in other folders)
